--- a/minigame/index.html
+++ b/minigame/index.html
@@ -2,20 +2,19 @@
 
 <html data-theme="light" lang="ko">
 <head>
-<meta charset="utf-8"/>
+<meta charset="utf-8"/><meta content="동행 파워볼, 키노사다리, 동키노, 미니게임 가이드, 미니게임 EV, 공정배당, 오버라운드, 배당 마진, 입플 조건, 롤링, 출금 규정" name="keywords"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>동행 파워볼·키노사다리·동키노 가이드 | 입플·주의사항 | 88</title>
-<meta content="동행 파워볼/키노사다리/동키노 유저를 위한 기본 용어, 입플 조건, 롤링·제한·유의사항을 정리했습니다. 고액 유저 기준 검증 포인트와 문의 가이드를 제공합니다." name="description"/>
+<title>동행 파워볼·키노사다리 가이드 | EV·공정배당 체크 | 88ST</title>
+<meta content="동행 파워볼·키노사다리·동키노 이용자를 위한 기본 용어/주의사항/입플 조건을 정리하고, 배당 기반 EV·공정배당 체크 방법도 함께 제공합니다." name="description"/>
 <link href="https://88st.cloud/minigame/" rel="canonical"/>
 <meta content="index,follow" name="robots"/>
 <meta content="website" property="og:type"/>
 <meta content="88 커뮤니티" property="og:site_name"/>
-<meta content="동행 미니게임 가이드 | 입플·주의사항 | 88" property="og:title"/>
-<meta content="파워볼/키노사다리/동키노 유저가 많이 묻는 조건·주의사항 정리." property="og:description"/>
+<meta content="동행 파워볼·키노사다리 가이드 | EV·공정배당 체크 | 88ST" property="og:title"/>
+<meta content="동행 파워볼·키노사다리·동키노 이용자를 위한 기본 용어/주의사항/입플 조건을 정리하고, 배당 기반 EV·공정배당 체크 방법도 함께 제공합니다." property="og:description"/>
 <meta content="https://88st.cloud/minigame/" property="og:url"/>
 <link href="/favicon.ico" rel="icon" type="image/x-icon"/>
-
-<link rel="stylesheet" href="/assets/css/x.a2eb039f7adc.css"/>
+<link href="/assets/css/x.a2eb039f7adc.css" rel="stylesheet"/>
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -42,7 +41,7 @@
 <script defer="" src="/assets/js/j.efba3509e62c.js"></script>
 <link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
 <script defer="" src="/assets/js/j.8829a3ccde44.js"></script>
-</head>
+<meta content="/img/logo.png" property="og:image"/></head>
 <body>
 <div class="scam-popup" id="scamPopup">
 <div class="scam-box">
@@ -130,6 +129,6 @@
 <div class="footer">© 88 Community · 안내/검증 정보는 운영 상황에 따라 변경될 수 있습니다.</div>
 </div>
 <script src="../assets/js/inline-bundles/b.eaed75994b05.js"></script>
-<script src="/assets/js/j.025d649c8b11.js" defer></script>
+<script defer="" src="/assets/js/j.025d649c8b11.js"></script>
 </body>
 </html>
