--- a/ok/index.html
+++ b/ok/index.html
@@ -1,41 +1,36 @@
 <!DOCTYPE html>
+
 <html data-theme="light" lang="ko">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>88ST.CLOUD | OK</title>
-  <meta name="description" content="88ST.CLOUD 안내 랜딩 페이지입니다."/>
-  <link rel="canonical" href="https://88st.cloud/ok/"/>
-  <meta name="robots" content="index,follow"/>
-  <link rel="icon" href="/favicon.ico" type="image/x-icon"/>
-  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
-
-  <link rel="stylesheet" href="/assets/c.9995eeb5cf82.css"/>
-
-  
-<link rel="stylesheet" href="/assets/css/x.58badcbb49ee.css"/>
-</head>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>랜딩 페이지 | 이동 안내 | 88ST</title>
+<meta content="클릭 한 번으로 이동하는 88ST 랜딩 페이지입니다." name="description"/>
+<link href="https://88st.cloud/ok/" rel="canonical"/>
+<meta content="noindex,follow" name="robots"/>
+<link href="/favicon.ico" rel="icon" type="image/x-icon"/>
+<link href="/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
+<link href="/assets/c.9995eeb5cf82.css" rel="stylesheet"/>
+<link href="/assets/css/x.58badcbb49ee.css" rel="stylesheet"/>
+<meta content="랜딩 페이지 | 이동 안내 | 88ST" property="og:title"/><meta content="클릭 한 번으로 이동하는 88ST 랜딩 페이지입니다." property="og:description"/><meta content="website" property="og:type"/><meta content="https://88st.cloud/ok/" property="og:url"/><meta content="/img/logo.png" property="og:image"/></head>
 <body>
-  <div class="st-landing-wrap">
-
-    <a class="st-landing-cover" href="http://ok-8888.com/?code=88ST" aria-label="클릭하여 오케이벳으로 이동">
-      <img src="/img/img98.webp" alt="88ST.CLOUD 랜딩 이미지" loading="eager"/>
-      <div class="st-landing-overlay" aria-hidden="true"></div>
-      <div class="st-landing-caption" aria-hidden="true">
-        <p class="t">OK 안내</p>
-        <p class="d">클릭하면 오케이벳으로 이동합니다. 상담이 필요하면 텔레그램 문의를 이용하세요.</p>
-        <div class="st-landing-pill">🔎 안내 페이지</div>
-      </div>
-    </a>
-  </div>
-
-  <a class="st-tg-fab" href="https://t.me/UZU59" target="_blank" rel="noopener noreferrer" aria-label="텔레그램 상담 문의">
-    <span class="st-tg-dot" aria-hidden="true"></span>
+<div class="st-landing-wrap">
+<a aria-label="클릭하여 오케이벳으로 이동" class="st-landing-cover" href="http://ok-8888.com/?code=88ST">
+<img alt="88ST.CLOUD 랜딩 이미지" loading="eager" src="/img/img98.webp"/>
+<div aria-hidden="true" class="st-landing-overlay"></div>
+<div aria-hidden="true" class="st-landing-caption">
+<p class="t">OK 안내</p>
+<p class="d">클릭하면 오케이벳으로 이동합니다. 상담이 필요하면 텔레그램 문의를 이용하세요.</p>
+<div class="st-landing-pill">🔎 안내 페이지</div>
+</div>
+</a>
+</div>
+<a aria-label="텔레그램 상담 문의" class="st-tg-fab" href="https://t.me/UZU59" rel="noopener noreferrer" target="_blank">
+<span aria-hidden="true" class="st-tg-dot"></span>
     텔레그램 상담문의
   </a>
-
-  <script defer src="/assets/js/j.8829a3ccde44.js"></script>
-  <script defer src="/assets/js/j.d2cf652ff950.js"></script>
-<script src="/assets/js/j.025d649c8b11.js" defer></script>
+<script defer="" src="/assets/js/j.8829a3ccde44.js"></script>
+<script defer="" src="/assets/js/j.d2cf652ff950.js"></script>
+<script defer="" src="/assets/js/j.025d649c8b11.js"></script>
 </body>
 </html>
