--- a/slot/index.html
+++ b/slot/index.html
@@ -2,20 +2,19 @@
 
 <html data-theme="light" lang="ko">
 <head>
-<meta charset="utf-8"/>
+<meta charset="utf-8"/><meta content="슬롯 입플, 슬롯 보너스, 슬롯 페이백, 슬롯 롤링, 슬롯 출금 조건, RTP, 슬롯 환수율, 하우스엣지, 변동성, 제외 게임" name="keywords"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>온라인 슬롯 입플·보너스 조건 정리 | 88 커뮤니티</title>
-<meta content="온라인 슬롯 유저가 자주 찾는 입플/보너스 조건과 주의사항(롤링/게임제한/환전)을 정리했습니다. 검증 기준과 문의 가이드를 제공합니다." name="description"/>
+<title>슬롯 보너스·입플 조건 정리 | RTP·변동성 기초 | 88ST</title>
+<meta content="온라인 슬롯 이용 전 확인해야 할 입플/보너스/페이백 조건과 롤링·제외게임·출금 규정을 정리했습니다. RTP(환수율)·변동성 기본도 함께 안내." name="description"/>
 <link href="https://88st.cloud/slot/" rel="canonical"/>
 <meta content="index,follow" name="robots"/>
 <meta content="website" property="og:type"/>
 <meta content="88 커뮤니티" property="og:site_name"/>
-<meta content="온라인 슬롯 입플·보너스 조건 정리 | 88" property="og:title"/>
-<meta content="슬롯 보너스 조건·주의사항·검증 포인트 정리." property="og:description"/>
+<meta content="슬롯 보너스·입플 조건 정리 | RTP·변동성 기초 | 88ST" property="og:title"/>
+<meta content="온라인 슬롯 이용 전 확인해야 할 입플/보너스/페이백 조건과 롤링·제외게임·출금 규정을 정리했습니다. RTP(환수율)·변동성 기본도 함께 안내." property="og:description"/>
 <meta content="https://88st.cloud/slot/" property="og:url"/>
 <link href="/favicon.ico" rel="icon" type="image/x-icon"/>
-
-<link rel="stylesheet" href="/assets/css/x.f112c1e92dfe.css"/>
+<link href="/assets/css/x.f112c1e92dfe.css" rel="stylesheet"/>
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -42,7 +41,7 @@
 <script defer="" src="/assets/js/j.efba3509e62c.js"></script>
 <link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
 <script defer="" src="/assets/js/j.8829a3ccde44.js"></script>
-</head>
+<meta content="/img/logo.png" property="og:image"/></head>
 <body>
 <div class="scam-popup" id="scamPopup">
 <div class="scam-box">
@@ -124,6 +123,6 @@
 <div class="footer">© 88 Community · 안내/검증 정보는 운영 상황에 따라 변경될 수 있습니다.</div>
 </div>
 <script src="../assets/js/inline-bundles/b.e7db955627.js"></script>
-<script src="/assets/js/j.025d649c8b11.js" defer></script>
+<script defer="" src="/assets/js/j.025d649c8b11.js"></script>
 </body>
 </html>
