--- a/tool-casino/index.html
+++ b/tool-casino/index.html
@@ -4,15 +4,15 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>바카라 전략 계산기 | 마틴게일·파롤리·달랑베르·오스카·피보나치·라부셰르</title>
-<meta content="바카라(PLAYER 2.00 / BANKER 1.97) 기준으로 마틴게일·파롤리·달랑베르·오스카 그라인드·피보나치·라부셰르를 스피드 버튼(WIN/LOSE)으로 즉시 계산합니다. 세션/자금관리 트래커 + 최근 5개 저장." name="description"/>
-<meta content="카지노 전략 분석기, 바카라 전략, 마틴게일, 파롤리, 달랑베르, 오스카 그라인드, 피보나치, 라부셰르, 세션 트래커, 배팅 계산기" name="keywords"/>
+<title>바카라 전략 계산기 | 마틴게일·파롤리·달랑베르·피보나치 | 88ST</title>
+<meta content="바카라 기준(PLAYER 2.00 / BANKER 1.97)으로 마틴게일·파롤리·달랑베르·오스카·피보나치·라부셰르 전략의 다음 베팅/세션 손익/최대낙폭을 계산합니다." name="description"/>
+<meta content="바카라 전략 계산기, 마틴게일 계산기, 파롤리 계산기, 달랑베르 계산기, 피보나치 배팅법, 라부셰르, 오스카 그라인드, 베팅금 계산기, 자금관리, 세션 손익, 최대낙폭" name="keywords"/>
 <meta content="index,follow" name="robots"/>
 <link href="https://88st.cloud/tool-casino/" rel="canonical"/>
 <meta content="website" property="og:type"/>
 <meta content="88 (팔팔커뮤니티)" property="og:site_name"/>
-<meta content="바카라 전략 계산기" property="og:title"/>
-<meta content="스피드 조작형(WIN/LOSE) 바카라 전략 계산기 + 세션 트래커" property="og:description"/>
+<meta content="바카라 전략 계산기 | 마틴게일·파롤리·달랑베르·피보나치 | 88ST" property="og:title"/>
+<meta content="바카라 기준(PLAYER 2.00 / BANKER 1.97)으로 마틴게일·파롤리·달랑베르·오스카·피보나치·라부셰르 전략의 다음 베팅/세션 손익/최대낙폭을 계산합니다." property="og:description"/>
 <meta content="https://88st.cloud/tool-casino/" property="og:url"/>
 <link href="/favicon.ico" rel="icon" type="image/x-icon"/>
 <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
@@ -21,7 +21,6 @@
 <link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
 <script defer="" src="/assets/js/j.8829a3ccde44.js"></script>
 <script defer="" src="/assets/js/j.c471c3193855.js"></script>
-
 <script src="../assets/js/inline-bundles/b.cba5ff41a7.js"></script>
 <script defer="" src="/assets/js/j.9179477b9417.js"></script>
 <script type="application/ld+json">
@@ -34,7 +33,7 @@
     ]
   }
   </script>
-</head>
+<meta content="/img/logo.png" property="og:image"/></head>
 <body class="st-app">
 <main class="cs-wrap">
 <section class="cs-hero">
@@ -85,7 +84,6 @@
 </div>
 </div>
 <div aria-label="전략 옵션" class="cs-adv" id="csStrategyOptions">
-
 </div>
 </section>
 <section aria-label="전략 &amp; 실행" class="cs-card">
@@ -200,6 +198,6 @@
 </div>
 </section>
 </main>
-<script src="/assets/js/j.025d649c8b11.js" defer></script>
+<script defer="" src="/assets/js/j.025d649c8b11.js"></script>
 </body>
 </html>
