--- a/tool-minigame/index.html
+++ b/tool-minigame/index.html
@@ -4,15 +4,15 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>미니게임 분석기 | 파워볼+·키노사다리 EV·마진·공정배당</title>
-<meta content="동행 파워볼+ · 동행 키노사다리 · 동행 스피드키노사다리의 배당(사용자 입력) 기준으로 암시확률, 오버라운드(마진), 공정확률/공정배당, EV(기대값)를 한 번에 계산합니다. 최근 결과 붙여넣기로 빈도 기반 확률도 계산할 수 있습니다." name="description"/>
-<meta content="미니게임 분석기, 동행 파워볼+ 분석기, 키노사다리 분석기, 스피드키노사다리 분석기, 파워볼 홀짝, 파워볼 언더오버, 대중소, 오버라운드, 마진 계산기, 공정배당, EV 계산기" name="keywords"/>
+<title>미니게임 분석기 | 파워볼·키노사다리 EV·공정배당 | 88ST</title>
+<meta content="동행 파워볼+·키노사다리·스피드키노사다리 배당을 입력해 EV(+EV), 마진(오버라운드), 공정배당을 계산합니다. (판단 보조용)" name="description"/>
+<meta content="미니게임 분석기, 파워볼 분석기, 키노사다리 분석기, 스피드키노사다리, 미니게임 EV, 오버라운드, 배당 마진, 공정배당, EV 계산기" name="keywords"/>
 <meta content="index,follow" name="robots"/>
 <link href="https://88st.cloud/tool-minigame/" rel="canonical"/>
 <meta content="website" property="og:type"/>
 <meta content="88 (팔팔커뮤니티)" property="og:site_name"/>
-<meta content="미니게임 분석기" property="og:title"/>
-<meta content="배당 입력 → 마진/공정배당/EV 계산 + 최근 결과 빈도 확률" property="og:description"/>
+<meta content="미니게임 분석기 | 파워볼·키노사다리 EV·공정배당 | 88ST" property="og:title"/>
+<meta content="동행 파워볼+·키노사다리·스피드키노사다리 배당을 입력해 EV(+EV), 마진(오버라운드), 공정배당을 계산합니다. (판단 보조용)" property="og:description"/>
 <meta content="https://88st.cloud/tool-minigame/" property="og:url"/>
 <link href="/favicon.ico" rel="icon" type="image/x-icon"/>
 <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
@@ -21,7 +21,6 @@
 <link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
 <script defer="" src="/assets/js/j.8829a3ccde44.js"></script>
 <script defer="" src="/assets/js/j.0a9ef6920d9e.js"></script>
-
 <script src="../assets/js/inline-bundles/b.d7a7e748dd.js"></script>
 <script defer="" src="/assets/js/j.9179477b9417.js"></script>
 <script type="application/ld+json">
@@ -34,7 +33,7 @@
     ]
   }
   </script>
-</head>
+<meta content="/img/logo.png" property="og:image"/></head>
 <body class="st-app">
 <main class="mg-wrap">
 <section class="mg-hero">
@@ -237,7 +236,6 @@
 </div>
 </main>
 <div aria-atomic="true" aria-live="polite" class="mg-toast" id="mgToast"></div>
-
-<script src="/assets/js/j.025d649c8b11.js" defer></script>
+<script defer="" src="/assets/js/j.025d649c8b11.js"></script>
 </body>
 </html>
