--- a/tool-slot/index.html
+++ b/tool-slot/index.html
@@ -4,18 +4,17 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>슬롯 환수율(RTP) 분석기 | RTP·변동성·세션 비용 계산</title>
-<meta content="슬롯 플레이 전, 환수율(RTP)·변동성·베팅·스핀수로 총베팅/기대손실/권장 뱅크롤을 한 번에 계산합니다." name="description"/>
-<meta content="슬롯 환수율(RTP) 분석기, 슬롯 분석기, 슬롯 RTP, 슬롯 변동성, 슬롯 기대손실, 뱅크롤 계산, 슬롯 세션 관리" name="keywords"/>
+<title>슬롯 RTP 분석기 | 환수율·하우스엣지·세션 비용 | 88ST</title>
+<meta content="RTP(환수율)·변동성·베팅·스핀 수를 기반으로 총베팅/기대손실/권장 뱅크롤/세션 비용을 계산합니다. 하우스엣지(100-RTP) 이해에 도움됩니다." name="description"/>
+<meta content="슬롯 RTP 분석기, 슬롯 환수율, 하우스 엣지, RTP 계산, 슬롯 변동성, 기대손실, 세션 비용, 뱅크롤, 슬롯 분석기" name="keywords"/>
 <link href="https://88st.cloud/tool-slot/" rel="canonical"/>
 <meta content="index,follow" name="robots"/>
 <meta content="website" property="og:type"/>
 <meta content="88 (팔팔커뮤니티)" property="og:site_name"/>
-<meta content="슬롯 환수율(RTP) 분석기 | RTP·변동성·세션 비용" property="og:title"/>
-<meta content="환수율(RTP)·변동성·베팅·스핀수로 총베팅/기대손실/권장 뱅크롤을 빠르게 계산합니다." property="og:description"/>
+<meta content="슬롯 RTP 분석기 | 환수율·하우스엣지·세션 비용 | 88ST" property="og:title"/>
+<meta content="RTP(환수율)·변동성·베팅·스핀 수를 기반으로 총베팅/기대손실/권장 뱅크롤/세션 비용을 계산합니다. 하우스엣지(100-RTP) 이해에 도움됩니다." property="og:description"/>
 <meta content="https://88st.cloud/tool-slot/" property="og:url"/>
-
-<link rel="stylesheet" href="/assets/css/x.11d0a10f603d.css"/>
+<link href="/assets/css/x.11d0a10f603d.css" rel="stylesheet"/>
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -56,7 +55,6 @@
   ]
 }
 </script>
-
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -93,7 +91,7 @@
 <script defer="" src="/assets/js/j.efba3509e62c.js"></script>
 <link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
 <script defer="" src="/assets/js/j.8829a3ccde44.js"></script>
-</head>
+<meta content="/img/logo.png" property="og:image"/></head>
 <body>
 <div class="wrap">
 <div class="hero">
@@ -151,7 +149,6 @@
 </div>
 </div>
 <script src="../assets/js/inline-bundles/b.e333b1edf1.js"></script>
-
 <script data-src="../assets/config/toolconfig/c.9344802715.json" id="__88stToolConfig" type="application/json"></script>
 <div class="card" style="margin-top:12px;">
 <h2>자주 묻는 질문(FAQ)</h2>
@@ -183,6 +180,6 @@
 <div class="small">책임감 있게 이용해 주세요. 과몰입 방지/리스크 관리가 우선입니다.</div>
 </footer>
 </div>
-<script src="/assets/js/j.025d649c8b11.js" defer></script>
+<script defer="" src="/assets/js/j.025d649c8b11.js"></script>
 </body>
 </html>
