--- a/index.html
+++ b/index.html
@@ -4,23 +4,19 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1, viewport-fit=cover" name="viewport"/>
-
-<title>88st.cloud | 스포츠 배당 분석기 · 미니게임 · 카지노 전략 · 슬롯 환수율(RTP) 분석기 · 마진/EV · 먹튀검증 안전놀이터</title>
-<meta content="88 — 스포츠 배당/마진(EV 포함) 분석기, 미니게임 분석기, 카지노 전략 분석기, 슬롯(RTP·변동성) 분석기를 한 곳에서. 인증/보증 정보와 함께 빠르게 확인하세요." name="description"/>
-<meta content="스포츠 분석기, 스포츠 배당 분석기, 배당 마진 계산기, 오버라운드, EV 계산기, 공정배당, 보증사이트, 인증사이트, 먹튀검증, 카지노 전략 분석기, 미니게임 분석기, 슬롯 환수율(RTP) 분석기, 슬롯 분석기, 슬롯 RTP, 슬롯 변동성" name="keywords"/>
+<title>88ST | 스포츠 배당 분석기 · EV/마진 · 켈리 계산기</title>
+<meta content="스포츠 배당 분석기(오버라운드·마진·EV·공정배당) + 켈리 비중 계산기, 슬롯 RTP 분석, 카지노 전략/미니게임 가이드를 한 곳에서 빠르게 확인하세요." name="description"/>
+<meta content="스포츠 배당 분석기, 배당 마진 계산기, 오버라운드 계산기, EV 계산기, 공정배당 계산기, 공정확률, 켈리 공식 계산기, 배당 확률 변환기, 슬롯 RTP 분석기, 바카라 전략 계산기, 미니게임 분석기, 입플 체크리스트, 인증사이트" name="keywords"/>
 <link href="https://88st.cloud/" rel="canonical"/>
 <meta content="index,follow" name="robots"/>
-
 <meta content="website" property="og:type"/>
 <meta content="88 (팔팔커뮤니티)" property="og:site_name"/>
-<meta content="88 | 스포츠 배당·마진/EV · 카지노 전략 · 미니게임 · 슬롯 환수율(RTP) 분석기" property="og:title"/>
-<meta content="무료 분석기(마진/EV/확률) + 슬롯 RTP/변동성 분석 + 인증 놀이터 안내" property="og:description"/>
+<meta content="88ST | 스포츠 배당 분석기 · EV/마진 · 켈리 계산기" property="og:title"/>
+<meta content="스포츠 배당 분석기(오버라운드·마진·EV·공정배당) + 켈리 비중 계산기, 슬롯 RTP 분석, 카지노 전략/미니게임 가이드를 한 곳에서 빠르게 확인하세요." property="og:description"/>
 <meta content="https://88st.cloud/" property="og:url"/>
 <link href="/favicon.ico" rel="icon" type="image/x-icon"/>
 <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
-
-
-<link rel="stylesheet" href="/assets/css/x.9d7841e705c5.css"/>
+<link href="/assets/css/x.9d7841e705c5.css" rel="stylesheet"/>
 <script src="/assets/js/inline-bundles/b.fa5e828602.js"></script>
 <script type="application/ld+json">
 {
@@ -68,7 +64,7 @@
 <script defer="" src="/assets/js/j.efba3509e62c.js"></script>
 <link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
 <script defer="" src="/assets/js/j.8829a3ccde44.js"></script>
-</head>
+<meta content="/img/logo.png" property="og:image"/></head>
 <body>
 <h1 style="position:absolute;left:-9999px;">스포츠 배당 분석기와 배당 마진 계산기 | 88</h1>
 <div class="header">
@@ -78,7 +74,6 @@
 <div class="sub">배당을 숫자로 정리하는 가장 빠른 분석기</div>
 </div>
 <div class="section-wrap">
-
 <div class="section" id="analyzerSection">
 <div class="title"><span class="badge">MAIN</span>분석기 바로가기</div>
 <div class="cta-row">
@@ -227,7 +222,6 @@
 <a data-cta="seo_ipl" href="/ipl/">IPL 가이드</a>
 <a data-cta="seo_analysis" href="/analysis/">분석기 메인</a></div>
 </div>
-
-</div><script src="/assets/js/j.025d649c8b11.js" defer></script>
+</div><script defer="" src="/assets/js/j.025d649c8b11.js"></script>
 </body>
 </html>
