--- a/tool-margin/index.html
+++ b/tool-margin/index.html
@@ -2,21 +2,19 @@
 
 <html data-theme="light" lang="ko">
 <head>
-<meta charset="utf-8"/>
+<meta charset="utf-8"/><meta content="배당 마진 계산기, 오버라운드 계산기, 비그(vig) 제거, 공정확률, 공정배당, 암시확률, 북메이커 마진, 배당률 계산기, 마진 제거" name="keywords"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>배당 마진(오버라운드) 계산기</title>
-<meta content="배당을 입력하면 암시확률 합(오버라운드)과 마진%, 공정확률/공정배당을 계산합니다." name="description"/>
+<title>배당 마진(오버라운드) 계산기 | Vig 제거·공정배당 | 88ST</title>
+<meta content="배당을 입력하면 암시확률 합(오버라운드)과 마진%, 공정확률/공정배당을 계산합니다. 북메이커 마진(vig) 제거 후 비교에 활용하세요." name="description"/>
 <link href="https://88st.cloud/tool-margin/" rel="canonical"/>
 <meta content="index,follow" name="robots"/>
 <meta content="website" property="og:type"/>
 <meta content="88 (팔팔커뮤니티)" property="og:site_name"/>
-<meta content="배당 마진(오버라운드) 계산기" property="og:title"/>
-<meta content="배당을 입력하면 암시확률 합(오버라운드)과 마진%, 공정확률/공정배당을 계산합니다." property="og:description"/>
+<meta content="배당 마진(오버라운드) 계산기 | Vig 제거·공정배당 | 88ST" property="og:title"/>
+<meta content="배당을 입력하면 암시확률 합(오버라운드)과 마진%, 공정확률/공정배당을 계산합니다. 북메이커 마진(vig) 제거 후 비교에 활용하세요." property="og:description"/>
 <meta content="https://88st.cloud/tool-margin/" property="og:url"/>
-
-<link rel="stylesheet" href="/assets/css/x.11d0a10f603d.css"/>
+<link href="/assets/css/x.11d0a10f603d.css" rel="stylesheet"/>
 <script type="application/ld+json">{"@context": "https://schema.org", "@type": "FAQPage", "mainEntity": [{"@type": "Question", "name": "오버라운드(마진)가 몇 %면 높은 편인가요?", "acceptedAnswer": {"@type": "Answer", "text": "종목/리그/시장에 따라 다르지만, 일반적으로 마진이 낮을수록 유리합니다. 같은 조건이면 2~4%대가 6~10%대보다 장기 기대값이 좋습니다."}}, {"@type": "Question", "name": "공정확률/공정배당은 무엇인가요?", "acceptedAnswer": {"@type": "Answer", "text": "암시확률을 100%로 정규화해 마진을 제거한 값입니다. ‘마진이 없는 시장’이라고 가정한 공정 기준으로 비교할 때 사용합니다."}}, {"@type": "Question", "name": "2-way와 3-way는 언제 쓰나요?", "acceptedAnswer": {"@type": "Answer", "text": "승/패만 있는 시장은 2-way, 승/무/패가 있는 시장은 3-way로 계산합니다."}}, {"@type": "Question", "name": "마진이 낮으면 무조건 좋은 배팅인가요?", "acceptedAnswer": {"@type": "Answer", "text": "아닙니다. 마진은 ‘수수료’에 가깝고, 실제 수익 여부는 추정 승률(엣지)과 배당의 균형(EV)에 달려 있습니다."}}, {"@type": "Question", "name": "이 계산기는 정답인가요?", "acceptedAnswer": {"@type": "Answer", "text": "계산 자체는 산술이지만, 실제 결과는 변동성이 큽니다. 참고용으로만 활용해 주세요."}}]}</script>
-
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -46,7 +44,7 @@
 <script defer="" src="/assets/js/j.efba3509e62c.js"></script>
 <link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
 <script defer="" src="/assets/js/j.8829a3ccde44.js"></script>
-</head>
+<meta content="/img/logo.png" property="og:image"/></head>
 <body>
 <div class="wrap">
 <div class="topbar">
@@ -106,7 +104,6 @@
 </div>
 </div>
 <script src="../assets/js/inline-bundles/b.7aefc0698d.js"></script>
-
 <script data-src="../assets/config/toolconfig/c.8ad1622c66.json" id="__88stToolConfig" type="application/json"></script>
 <div aria-label="인증 업체 빠른보기" class="vendor-teaser" data-vt-fixed="1,2,3,4" data-vt-pick="2" data-vt-pool="10,11,8,7" id="vendorTeaser">
 <div class="vt-head">
@@ -154,6 +151,6 @@
 <div class="small">책임감 있게 이용해 주세요. 과몰입 방지/리스크 관리가 우선입니다.</div>
 </footer>
 </div>
-<script src="/assets/js/j.025d649c8b11.js" defer></script>
+<script defer="" src="/assets/js/j.025d649c8b11.js"></script>
 </body>
 </html>
