--- a/tool-odds/index.html
+++ b/tool-odds/index.html
@@ -2,21 +2,19 @@
 
 <html data-theme="light" lang="ko">
 <head>
-<meta charset="utf-8"/>
+<meta charset="utf-8"/><meta content="배당 확률 변환기, 배당률 확률 변환, 암시확률, 공정배당, 공정확률, 배당 계산기, decimal odds, 손익분기점" name="keywords"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>배당 ↔ 확률 변환기</title>
-<meta content="배당을 확률로, 확률을 공정 배당으로 빠르게 변환합니다. (단일 결과 단순 기준)" name="description"/>
+<title>배당↔확률 변환기 | 암시확률·공정배당 계산 | 88ST</title>
+<meta content="배당을 확률로, 확률을 공정 배당으로 빠르게 변환합니다. 암시확률과 손익분기점 확률을 함께 확인해 비교/정리에 활용하세요." name="description"/>
 <link href="https://88st.cloud/tool-odds/" rel="canonical"/>
 <meta content="index,follow" name="robots"/>
 <meta content="website" property="og:type"/>
 <meta content="88 (팔팔커뮤니티)" property="og:site_name"/>
-<meta content="배당 ↔ 확률 변환기" property="og:title"/>
-<meta content="배당을 확률로, 확률을 공정 배당으로 빠르게 변환합니다. (단일 결과 단순 기준)" property="og:description"/>
+<meta content="배당↔확률 변환기 | 암시확률·공정배당 계산 | 88ST" property="og:title"/>
+<meta content="배당을 확률로, 확률을 공정 배당으로 빠르게 변환합니다. 암시확률과 손익분기점 확률을 함께 확인해 비교/정리에 활용하세요." property="og:description"/>
 <meta content="https://88st.cloud/tool-odds/" property="og:url"/>
-
-<link rel="stylesheet" href="/assets/css/x.11d0a10f603d.css"/>
+<link href="/assets/css/x.11d0a10f603d.css" rel="stylesheet"/>
 <script type="application/ld+json">{"@context": "https://schema.org", "@type": "FAQPage", "mainEntity": [{"@type": "Question", "name": "배당 2.00은 확률로 얼마인가요?", "acceptedAnswer": {"@type": "Answer", "text": "암시 확률은 1/2.00 = 50% 입니다(단일 결과 기준)."}}, {"@type": "Question", "name": "확률 60%면 공정 배당은?", "acceptedAnswer": {"@type": "Answer", "text": "공정 배당은 1/0.60 = 1.667 입니다(마진 없는 단순 계산)."}}, {"@type": "Question", "name": "여러 결과(승/무/패)는 어떻게 하나요?", "acceptedAnswer": {"@type": "Answer", "text": "각 결과 배당을 모두 넣고 마진 계산기에서 오버라운드를 구한 뒤, 공정확률/공정배당을 확인하는 방식이 정확합니다."}}, {"@type": "Question", "name": "마진이 있으면 확률 변환이 왜 달라지나요?", "acceptedAnswer": {"@type": "Answer", "text": "북메이커는 각 결과에 수수료를 포함시키기 때문에(오버라운드), 단순 1/배당의 합이 100%를 넘을 수 있습니다."}}, {"@type": "Question", "name": "이 변환은 언제 쓰면 좋나요?", "acceptedAnswer": {"@type": "Answer", "text": "손익분기점 계산, EV 계산의 기본 입력값 확인, 배당 비교(가치 판단)에 유용합니다."}}]}</script>
-
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -46,7 +44,7 @@
 <script defer="" src="/assets/js/j.efba3509e62c.js"></script>
 <link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
 <script defer="" src="/assets/js/j.8829a3ccde44.js"></script>
-</head>
+<meta content="/img/logo.png" property="og:image"/></head>
 <body>
 <div class="wrap">
 <div class="topbar">
@@ -101,7 +99,6 @@
 </div>
 </div>
 <script src="../assets/js/inline-bundles/b.cf89e579c7.js"></script>
-
 <script data-src="../assets/config/toolconfig/c.5a1d7b44d3.json" id="__88stToolConfig" type="application/json"></script>
 <div aria-label="인증 업체 빠른보기" class="vendor-teaser" data-vt-fixed="1,2,3,4" data-vt-pick="2" data-vt-pool="10,11,8,7" id="vendorTeaser">
 <div class="vt-head">
@@ -149,6 +146,6 @@
 <div class="small">책임감 있게 이용해 주세요. 과몰입 방지/리스크 관리가 우선입니다.</div>
 </footer>
 </div>
-<script src="/assets/js/j.025d649c8b11.js" defer></script>
+<script defer="" src="/assets/js/j.025d649c8b11.js"></script>
 </body>
 </html>
