--- a/tool/ev/index.html
+++ b/tool/ev/index.html
@@ -2,21 +2,19 @@
 
 <html data-theme="light" lang="ko">
 <head>
-<meta charset="utf-8"/>
+<meta charset="utf-8"/><meta content="EV 계산기, 기대값 계산기, +EV, 밸류베팅" name="keywords"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>EV(+EV) 계산기 | 88st.cloud</title>
-<meta content="배당과 내 예상 확률을 입력하면 EV(기대값)와 +EV 여부를 빠르게 계산합니다." name="description"/>
-<link href="https://88st.cloud/tool/ev/" rel="canonical"/>
-<meta content="index,follow" name="robots"/>
+<title>EV(기대값) 계산기 | +EV 밸류 체크 | 88ST</title>
+<meta content="배당과 내 추정 확률을 입력하면 EV(기대값)과 +EV/-EV 여부, 기대수익을 계산합니다. (기본 도구 페이지)" name="description"/>
+<link href="https://88st.cloud/tool-ev/" rel="canonical"/>
+<meta content="noindex,follow" name="robots"/>
 <meta content="website" property="og:type"/>
 <meta content="88 (팔팔커뮤니티)" property="og:site_name"/>
-<meta content="EV(+EV) 계산기 | 88st.cloud" property="og:title"/>
-<meta content="배당과 내 예상 확률을 입력하면 EV(기대값)와 +EV 여부를 빠르게 계산합니다." property="og:description"/>
-<meta content="https://88st.cloud/tool/ev/" property="og:url"/>
-
-<link rel="stylesheet" href="/assets/css/x.11d0a10f603d.css"/>
+<meta content="EV(기대값) 계산기 | +EV 밸류 체크 | 88ST" property="og:title"/>
+<meta content="배당과 내 추정 확률을 입력하면 EV(기대값)과 +EV/-EV 여부, 기대수익을 계산합니다. (기본 도구 페이지)" property="og:description"/>
+<meta content="https://88st.cloud/tool-ev/" property="og:url"/>
+<link href="/assets/css/x.11d0a10f603d.css" rel="stylesheet"/>
 <script type="application/ld+json">{"@context": "https://schema.org", "@type": "FAQPage", "mainEntity": [{"@type": "Question", "name": "손익분기점 승률은 왜 1/배당인가요?", "acceptedAnswer": {"@type": "Answer", "text": "배당이 o일 때, 기대수익이 0이 되는 확률이 1/o 입니다(수수료·마진 단순화 가정)."}}, {"@type": "Question", "name": "+EV이면 무조건 이기나요?", "acceptedAnswer": {"@type": "Answer", "text": "아닙니다. +EV는 장기 평균 관점에서 유리할 ‘가능성’을 뜻합니다. 단기 변동성은 매우 큽니다."}}, {"@type": "Question", "name": "추정 승률은 어떻게 잡나요?", "acceptedAnswer": {"@type": "Answer", "text": "최근 폼, 라인업, 일정, 상대 전적, 시장 변동 등 여러 요소를 참고해 ‘내 기준’으로 추정합니다."}}, {"@type": "Question", "name": "마진(오버라운드)을 제거한 EV도 있나요?", "acceptedAnswer": {"@type": "Answer", "text": "가능합니다. 마진 계산기로 공정확률을 만든 뒤, 그 기준으로 승률/배당을 비교하면 더 보수적인 평가가 됩니다."}}, {"@type": "Question", "name": "추천 배팅 금액도 계산되나요?", "acceptedAnswer": {"@type": "Answer", "text": "현재 페이지는 EV만 계산합니다. 향후 켈리/유닛 사이징 도구로 확장할 수 있습니다."}}]}</script>
-
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -46,7 +44,7 @@
 <script defer="" src="/assets/js/j.efba3509e62c.js"></script>
 <link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
 <script defer="" src="/assets/js/j.8829a3ccde44.js"></script>
-</head>
+<meta content="/img/logo.png" property="og:image"/></head>
 <body>
 <div class="wrap">
 <div class="topbar">
@@ -146,6 +144,6 @@
 <div class="small">책임감 있게 이용해 주세요. 과몰입 방지/리스크 관리가 우선입니다.</div>
 </footer>
 </div>
-<script src="/assets/js/j.025d649c8b11.js" defer></script>
+<script defer="" src="/assets/js/j.025d649c8b11.js"></script>
 </body>
 </html>
