--- a/tool/kelly/index.html
+++ b/tool/kelly/index.html
@@ -2,20 +2,19 @@
 
 <html data-theme="light" lang="ko">
 <head>
-<meta charset="utf-8"/>
+<meta charset="utf-8"/><meta content="켈리 공식 계산기, 켈리 기준, 베팅 비중, 하프 켈리, 부분 켈리, 포지션 사이징, 자본 관리, +EV" name="keywords"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>켈리(Kelly) 비중 계산기 | 88st.cloud</title>
-<meta content="배당과 내 예상 확률을 입력하면 켈리 기준 베팅 비중을 계산합니다. 보수적 1/2·1/4 Kelly, 최대 비중 캡을 지원합니다." name="description"/>
+<title>켈리 공식 계산기 | 하프켈리·베팅 비중 | 88ST</title>
+<meta content="배당과 내 예상 확률을 입력하면 켈리 기준 베팅 비중을 계산합니다. 보수적 1/2·1/4 켈리 옵션으로 변동성을 줄여 운영하세요." name="description"/>
 <link href="https://88st.cloud/tool/kelly/" rel="canonical"/>
 <meta content="index,follow" name="robots"/>
 <meta content="website" property="og:type"/>
 <meta content="88 (팔팔커뮤니티)" property="og:site_name"/>
-<meta content="켈리(Kelly) 비중 계산기" property="og:title"/>
-<meta content="배당+확률로 Kelly 비중을 계산(보수적 옵션/캡 지원)." property="og:description"/>
+<meta content="켈리 공식 계산기 | 하프켈리·베팅 비중 | 88ST" property="og:title"/>
+<meta content="배당과 내 예상 확률을 입력하면 켈리 기준 베팅 비중을 계산합니다. 보수적 1/2·1/4 켈리 옵션으로 변동성을 줄여 운영하세요." property="og:description"/>
 <meta content="https://88st.cloud/tool/kelly/" property="og:url"/>
 <link href="/assets/c.d0474bb4988d.css" rel="stylesheet"/>
-
-<link rel="stylesheet" href="/assets/css/x.47ddb177636d.css"/>
+<link href="/assets/css/x.47ddb177636d.css" rel="stylesheet"/>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"켈리 기준은 무엇인가요?","acceptedAnswer":{"@type":"Answer","text":"켈리 기준은 장기 로그성장률을 최대화하는 베팅 비중을 산출하는 방법입니다. 변동성이 커서 보수적(1/2, 1/4 Kelly)으로 쓰는 경우가 많습니다."}},{"@type":"Question","name":"확률이 정확하지 않으면 어떻게 되나요?","acceptedAnswer":{"@type":"Answer","text":"내 예상 확률이 과대평가되면 권장 비중이 과도해질 수 있습니다. 보수 계수(예: 1/4 Kelly)와 최대 비중 캡을 함께 사용하는 것을 권장합니다."}},{"@type":"Question","name":"켈리가 0% 이하로 나오면?","acceptedAnswer":{"@type":"Answer","text":"해당 입력 조건에서는 기대값이 음수로 해석될 수 있어 비중 0%가 권장됩니다."}},{"@type":"Question","name":"이 도구는 투자/배팅 조언인가요?","acceptedAnswer":{"@type":"Answer","text":"아니요. 본 도구는 판단 보조용 계산기이며, 결과/수익을 보장하지 않습니다."}}]}</script>
 <script src="/assets/js/j.9179477b9417.js"></script>
 <script defer="" src="/assets/js/j.71bbe4a35d81.js"></script>
@@ -25,7 +24,7 @@
 <script defer="" src="/assets/js/j.efba3509e62c.js"></script>
 <link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
 <script defer="" src="/assets/js/j.8829a3ccde44.js"></script>
-</head>
+<meta content="/img/logo.png" property="og:image"/></head>
 <body>
 <div class="wrap">
 <div class="topbar">
@@ -116,6 +115,6 @@
 <div class="small" style="margin-top:14px;opacity:.75;">※ 본 도구는 판단 보조용이며 결과/수익을 보장하지 않습니다.</div>
 </div>
 <script src="../../assets/js/inline-bundles/b.c66a197be4.js"></script>
-<script src="/assets/js/j.025d649c8b11.js" defer></script>
+<script defer="" src="/assets/js/j.025d649c8b11.js"></script>
 </body>
 </html>
