--- a/index.html
+++ b/index.html
@@ -151,6 +151,22 @@
 <div class="why-note">같은 시장/종류라면 <b>마진이 낮을수록</b> 비용(수수료)이 낮은 편입니다. (참고용)</div>
 <div class="why-cta"><a class="insight-btn primary" data-cta="open_tool_sports" href="/analysis/">스포츠 분석기 열기 <span aria-hidden="true">→</span></a></div>
 </div>
+<div aria-label="가상스포츠 분석기" class="why-card">
+<div class="why-kicker">가상스포츠 분석기</div>
+<div class="why-head"><b>Bet365 가상게임 전 종목</b> 배당을 입력하면 마진/공정확률/EV/켈리를 빠르게 확인합니다.</div>
+<ul class="why-list">
+<li><b>종목·마켓 선택</b>으로 승/무/패 · 오버/언더 · 핸디 · 다중 우승자까지 즉시 분석</li>
+<li><b>오버라운드(마진)</b> + <b>공정확률/공정배당</b> 자동 정규화</li>
+<li><b>내 확률</b>을 입력하면 <b>EV(+EV)</b>와 <b>보수적 켈리(캡)</b>까지 계산</li>
+</ul>
+<div class="why-metrics">
+<div class="why-metric"><div class="t">지원</div><div class="v">축구·농구</div><div class="s">2/3-way</div></div>
+<div class="why-metric"><div class="t">경마</div><div class="v">다중 결과</div><div class="s">리스트 붙여넣기</div></div>
+<div class="why-metric"><div class="t">리스크</div><div class="v">켈리×캡</div><div class="s">보수적 비중</div></div>
+</div>
+<div class="why-note">이 도구는 ‘예측’이 아니라 <b>수학 기반 판단 보조</b>입니다. 과몰입을 피하세요.</div>
+<div class="why-cta"><a class="insight-btn primary" data-cta="open_tool_virtual" href="/tool-virtual/">가상스포츠 분석기 열기 <span aria-hidden="true">→</span></a></div>
+</div>
 <div aria-label="미니게임 분석기" class="why-card">
 <div class="why-kicker">미니게임 분석기</div>
 <div class="why-head"><b>최근 결과를 한 번에 정리</b>해서 ‘흐름/편향’을 빠르게 확인합니다.</div>
@@ -203,25 +219,8 @@
 </div>
 </div>
 </div>
-<div id="vendorTop" style="display:none"></div>
-<div class="landing-seo">
-<h3>관련 정보</h3>
-<div class="links">
-<a data-cta="seo_margin" href="/tool-margin/">배당 마진 계산기</a>
-<a data-cta="seo_ev" href="/tool-ev/">EV 계산기</a>
-<a data-cta="seo_odds" href="/tool-odds/">배당↔확률 변환</a>
-<a data-cta="seo_bonus" href="/bonus-checklist/">입플 체크리스트</a>
-<a href="/landing-a/">입플·보너스 분석기</a>
-<a href="/landing-b/">고액 유저 안내</a>
-<a href="/landing-c/">배당 마진·EV 계산</a>
-<a href="/landing-d/">배당 흐름 분석</a>
-<a data-cta="seo_casino" href="/casino/">카지노 가이드</a>
-<a data-cta="seo_slot" href="/slot/">슬롯 가이드</a>
-<a data-cta="seo_tool_slot" href="/tool-slot/">슬롯 환수율(RTP) 분석기</a>
-<a data-cta="seo_minigame" href="/minigame/">미니게임 가이드</a>
-<a data-cta="seo_ipl" href="/ipl/">IPL 가이드</a>
-<a data-cta="seo_analysis" href="/analysis/">분석기 메인</a></div>
 </div>
-</div><script defer="" src="/assets/js/j.025d649c8b11.js"></script>
+</div>
+<script defer="" src="/assets/js/j.025d649c8b11.js"></script>
 </body>
 </html>
