--- a/index.html
+++ b/index.html
@@ -84,18 +84,7 @@
 <path d="M7 14l3-3 3 2 5-6"></path>
 </svg>
 </span>
-<span class="label">스포츠 분석기 이동<span class="sub"> 중·고급·핸디·언더·오버·EV</span></span>
-</a>
-<a class="analyze-btn secondary" data-cta="open_tool_minigame" href="/tool-minigame/">
-<span aria-hidden="true" class="icon">
-<svg fill="none" height="22" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewbox="0 0 24 24" width="22">
-<path d="M12 3v18"></path>
-<path d="M3 12h18"></path>
-<path d="M7 7l10 10"></path>
-<path d="M17 7L7 17"></path>
-</svg>
-</span>
-<span class="label">미니게임 분석기 이동<span class="sub">동행 파워볼·파워볼+·키노사다리</span></span>
+<span class="label">스포츠 분석기<span class="sub"> 중·고급·핸디·언더·오버·EV</span></span>
 </a>
 <a class="analyze-btn secondary" data-cta="open_tool_casino" href="/tool-casino/">
 <span aria-hidden="true" class="icon">
@@ -106,7 +95,30 @@
 <path d="M16 12h0"></path>
 </svg>
 </span>
-<span class="label">카지노 전략 분석기 이동<span class="sub">마틴·파롤리·달랑·오스카·피보·라부</span></span>
+<span class="label">미니카지노 전략 분석기<span class="sub"> 마틴·파롤리·달랑·오스카·피보·라부</span></span>
+</a>
+<a class="analyze-btn secondary" data-cta="open_tool_minigame" href="/tool-minigame/">
+<span aria-hidden="true" class="icon">
+<svg fill="none" height="22" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewbox="0 0 24 24" width="22">
+<path d="M12 3v18"></path>
+<path d="M3 12h18"></path>
+<path d="M7 7l10 10"></path>
+<path d="M17 7L7 17"></path>
+</svg>
+</span>
+<span class="label">미니게임 분석기<span class="sub"> 동행 파워볼·파워볼+·키노사다리</span></span>
+</a>
+<a class="analyze-btn secondary" data-cta="open_tool_virtual" href="/tool-virtual/">
+<span aria-hidden="true" class="icon">
+<svg fill="none" height="22" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewbox="0 0 24 24" width="22">
+<path d="M21 16V8a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2z"></path>
+<path d="M7 15h.01"></path>
+<path d="M11 15h2"></path>
+<path d="M16 15h.01"></path>
+<path d="M7 9h10"></path>
+</svg>
+</span>
+<span class="label">BET365 가상게임 분석기<span class="sub">가상축구·농구·테니스·경마·레이싱</span></span>
 </a>
 <a class="analyze-btn secondary" data-cta="open_tool_slot" href="/tool-slot/">
 <span aria-hidden="true" class="icon">
@@ -120,15 +132,7 @@
 <path d="M8 15h8"></path>
 </svg>
 </span>
-<span class="label">슬롯 환수율(RTP) 분석기<span class="sub">RTP·변동성·세션 비용·뱅크롤</span></span>
-</a>
-<a class="analyze-btn secondary" data-cta="open_cert" href="/cert/">
-<span aria-hidden="true" class="icon">
-<svg fill="none" height="22" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewbox="0 0 24 24" width="22">
-<path d="M12 2l3 7 7 3-7 3-3 7-3-7-7-3 7-3 3-7z"></path>
-</svg>
-</span>
-<span class="label">인증사이트 이동<span class="sub">/cert 페이지</span></span>
+<span class="label">슬롯 환수율 분석기<span class="sub"> RTP·변동성·세션 비용·뱅크롤</span></span>
 </a>
 </div>
 </div>
@@ -153,19 +157,20 @@
 </div>
 <div aria-label="가상스포츠 분석기" class="why-card">
 <div class="why-kicker">가상스포츠 분석기</div>
-<div class="why-head"><b>Bet365 가상게임 전 종목</b> 배당을 입력하면 마진/공정확률/EV/켈리를 빠르게 확인합니다.</div>
+<div class="why-head"><b>Bet365 가상게임 전 종목</b> 배당을 입력하면 마진/공정확률/공정배당을 즉시 정리해 줍니다.</div>
 <ul class="why-list">
 <li><b>종목·마켓 선택</b>으로 승/무/패 · 오버/언더 · 핸디 · 다중 우승자까지 즉시 분석</li>
 <li><b>오버라운드(마진)</b> + <b>공정확률/공정배당</b> 자동 정규화</li>
-<li><b>내 확률</b>을 입력하면 <b>EV(+EV)</b>와 <b>보수적 켈리(캡)</b>까지 계산</li>
+<li><b>라인 다중 붙여넣기</b>로 오버/언더 라인별 마진·공정배당을 한 번에 비교</li>
+<li><b>베스트</b>: 공정대비 ‘덜 불리한 선택’을 자동 표시</li>
 </ul>
 <div class="why-metrics">
-<div class="why-metric"><div class="t">지원</div><div class="v">축구·농구</div><div class="s">2/3-way</div></div>
-<div class="why-metric"><div class="t">경마</div><div class="v">다중 결과</div><div class="s">리스트 붙여넣기</div></div>
-<div class="why-metric"><div class="t">리스크</div><div class="v">켈리×캡</div><div class="s">보수적 비중</div></div>
+<div class="why-metric"><div class="t">지원</div><div class="v">전 종목</div><div class="s">승/무/패 · OU · 핸디</div></div>
+<div class="why-metric"><div class="t">다중</div><div class="v">경마·레이싱</div><div class="s">리스트 붙여넣기</div></div>
+<div class="why-metric"><div class="t">베스트</div><div class="v">자동 표시</div><div class="s">공정대비</div></div>
 </div>
 <div class="why-note">이 도구는 ‘예측’이 아니라 <b>수학 기반 판단 보조</b>입니다. 과몰입을 피하세요.</div>
-<div class="why-cta"><a class="insight-btn primary" data-cta="open_tool_virtual" href="/tool-virtual/">가상스포츠 분석기 열기 <span aria-hidden="true">→</span></a></div>
+<div class="why-cta"><a class="insight-btn primary" data-cta="open_tool_virtual" href="/tool-virtual/">BET365 가상게임 분석기 열기 <span aria-hidden="true">→</span></a></div>
 </div>
 <div aria-label="미니게임 분석기" class="why-card">
 <div class="why-kicker">미니게임 분석기</div>
