--- a/tool-virtual/index.html
+++ b/tool-virtual/index.html
@@ -121,8 +121,7 @@
 
     <div class="grid">
       <div class="card">
-        <h2>입력</h2>
-
+        
         <div class="presetbar" aria-label="빠른 템플릿">
           <div class="preset" data-preset="soccer:1x2"><span class="dot"></span><b>축구</b> 승/무/패</div>
           <div class="preset" data-preset="soccer:ou"><span class="dot"></span><b>축구</b> 오버/언더</div>
@@ -226,7 +225,7 @@
           공정확률/공정배당은 입력 배당의 암시확률을 정규화해 계산합니다. “공정대비”는 그 공정배당 대비 얼마나 덜 불리한지(상대지표)를 보여줍니다.
         </div>
         <div style="margin-top:12px;">
-          <span class="chip neu" id="healthChip">입력 대기</span>
+          <span class="chip neu" id="healthChip">대기</span>
         </div>
       </div>
     </div>
