--- a/tool-virtual/index.html
+++ b/tool-virtual/index.html
@@ -138,13 +138,6 @@
           </div>
         </div>
 
-        <div style="margin-top:10px;">
-          <div class="btnrow">
-            <div class="btn" id="calcBtn">즉시 계산</div>
-            <div class="btn secondary" id="resetBtn">초기화</div>
-          </div>
-        </div>
-
         <div class="divider"></div>
 
         <div id="pasteWrap" style="display:none">
@@ -193,6 +186,13 @@
               <tbody id="pairBody"></tbody>
             </table>
           </div>
+        </div>
+
+        <div class="divider"></div>
+
+        <div class="btnrow" style="justify-content:flex-start; gap:10px;">
+          <div class="btn" id="calcBtn">즉시 계산</div>
+          <div class="btn secondary" id="resetBtn">초기화</div>
         </div>
 
         <div class="subnote">
