--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 <path d="M16 12h0"></path>
 </svg>
 </span>
-<span class="label">카지노 전략 분석기<span class="sub"> 마틴·파롤리·달랑·오스카·피보·라부</span></span>
+<span class="label">미니카지노 전략 분석기<span class="sub"> 마틴·파롤리·달랑·오스카·피보·라부</span></span>
 </a>
 <a class="analyze-btn secondary" data-cta="open_tool_minigame" href="/tool-minigame/">
 <span aria-hidden="true" class="icon">
