--- a/tool-virtual/index.html
+++ b/tool-virtual/index.html
@@ -134,6 +134,9 @@
     .dockCenter{justify-content:center;}
     .dockRight{justify-content:flex-end;}
     .dockSpacer{flex:1; min-width: 10px;}
+    .dockTools{display:flex; align-items:center; gap:10px; min-width: 10px;}
+    .dockDivider{width:1px; height:28px; background: rgba(255,255,255,.16); border-radius: 999px; flex:0 0 auto;}
+    [data-theme="light"] .dockDivider{background: rgba(0,0,0,.14);}
 
     /* Make injected global tool bar elements fit the dock */
     .actionDock .stx-btn{height:40px; padding: 0 14px; border-radius: 14px; font-weight:900;}
@@ -141,11 +144,40 @@
     .actionDock .stx-chiprow{display:flex; flex-wrap:wrap; gap:10px; align-items:center;}
 
     @media (max-width: 820px){
-      .actionDock{flex-wrap:wrap;}
-      .dockCenter,.dockRight{margin-left:0;}
-      .dockCenter{order: 3; width:100%; justify-content:flex-start;}
-      .dockRight{order: 2; width:100%; justify-content:flex-start;}
-      .dockLeft{order: 1; width:100%;}
+      .actionDock{flex-direction:column; align-items:stretch; gap:10px;}
+      .dockSpacer{display:none;}
+      .dockLeft{width:100%;}
+      .dockTools{width:100%; justify-content:flex-start;}
+      .dockCenter{justify-content:flex-start;}
+      .dockRight{justify-content:flex-start;}
+    }
+
+    /* --- Mobile polish: keep dock compact + horizontal scroll for tools (no tall blocks) --- */
+    @media (max-width: 520px){
+      .actionDock{flex-direction:column; align-items:stretch; gap:8px; padding:10px; bottom: 10px;}
+      .dockSpacer{display:none;}
+
+      /* calc/reset = 2-column primary row */
+      .dockLeft{display:grid; grid-template-columns: 1fr 1fr; gap:8px; width:100%;}
+      .dockLeft .btn{width:100%; justify-content:center;}
+
+      /* tools = single compact row (scrollable) */
+      .dockTools{display:flex; gap:8px; width:100%; overflow-x:auto; -webkit-overflow-scrolling:touch; padding-bottom:2px;}
+      .dockTools::-webkit-scrollbar{display:none;}
+      .dockCenter,.dockRight{flex-wrap:nowrap; gap:8px;}
+      .dockRight{margin-left:auto;}
+
+      /* compact buttons inside dock */
+      .actionDock .stx-btn{height:36px; padding:0 12px; border-radius: 14px; font-size:13px;}
+      .actionDock .stx-chip{height:36px; padding:0 12px; font-size:13px;}
+      #calcBtn,#resetBtn{height:40px; padding: 0 12px; font-size:14px;}
+    }
+
+    /* Mobile subnote: prevent awkward syllable-breaking; use horizontal scroll row */
+    @media (max-width: 520px){
+      .subnote{flex-wrap:nowrap; overflow-x:auto; -webkit-overflow-scrolling:touch; padding-bottom:2px;}
+      .subnote::-webkit-scrollbar{display:none;}
+      .pill{flex:0 0 auto; white-space:nowrap; word-break: keep-all; line-height:1.2;}
     }
 </style>
 </head>
@@ -239,8 +271,10 @@
             <div class="btn secondary" id="resetBtn">초기화</div>
           </div>
           <div class="dockSpacer" aria-hidden="true"></div>
-          <div class="dockCenter" id="dockCenter"></div>
-          <div class="dockRight" id="dockRight"></div>
+          <div class="dockTools" id="dockTools">
+            <div class="dockCenter" id="dockCenter"></div>
+            <div class="dockRight" id="dockRight"></div>
+          </div>
         </div>
 
         <div class="subnote">
@@ -285,6 +319,46 @@
 
   <script src="../assets/js/inline-bundles/b.virtual.v31.7c2f0c2a7a.js"></script>
   <script id="__88stToolConfig" type="application/json" data-src="../assets/config/toolconfig/c.4b8e8f74b9.json"></script>
+  <script>
+    // Mobile/desktop dock polish: keep tools compact and insert a subtle divider between "예시" and "공유/저장/히스토리".
+    (function(){
+      function setupDockDivider(){
+        var tools = document.getElementById('dockTools');
+        var center = document.getElementById('dockCenter');
+        var right = document.getElementById('dockRight');
+        if(!tools || !center || !right) return;
+
+        function ensure(){
+          var hasCenter = center.children && center.children.length > 0;
+          var hasRight = right.children && right.children.length > 0;
+          var div = document.getElementById('dockDivider');
+          if(hasCenter && hasRight){
+            if(!div){
+              div = document.createElement('span');
+              div.id = 'dockDivider';
+              div.className = 'dockDivider';
+              tools.insertBefore(div, right);
+            }
+          } else {
+            if(div) div.remove();
+          }
+        }
+
+        try{
+          var mo = new MutationObserver(ensure);
+          mo.observe(center, {childList:true, subtree:false});
+          mo.observe(right, {childList:true, subtree:false});
+        } catch(e) {}
+        ensure();
+      }
+
+      if(document.readyState === 'loading'){
+        document.addEventListener('DOMContentLoaded', setupDockDivider);
+      } else {
+        setupDockDivider();
+      }
+    })();
+  </script>
   <script defer src="/assets/js/j.025d649c8b11.js"></script>
 </body>
 </html>
