--- a/tool-virtual/index.html
+++ b/tool-virtual/index.html
@@ -188,6 +188,67 @@
       .subnote::-webkit-scrollbar{display:none;}
       .pill{flex:0 0 auto; white-space:nowrap; word-break: keep-all; line-height:1.2;}
     }
+
+/* --- Quick Paste + Margin Scanner (luxe) --- */
+.qpWrap{margin-top: 8px;}
+.qpTitle{display:flex; align-items:baseline; gap:10px; flex-wrap:wrap;}
+.qpMeta{opacity:.72; font-weight:800;}
+.textarea.qp{min-height: 88px;}
+.scanGrid{display:grid; grid-template-columns: repeat(12, minmax(0, 1fr)); gap:10px; margin-top:10px;}
+.scanCard{grid-column: span 4; padding:12px 12px; border-radius:18px; cursor:pointer;
+  background: rgba(255,255,255,.06); border:1px solid rgba(255,255,255,.10);
+  box-shadow: 0 10px 24px rgba(0,0,0,.12);
+  display:flex; flex-direction:column; gap:8px;
+}
+[data-theme="light"] .scanCard{background: rgba(0,0,0,.03); border:1px solid rgba(0,0,0,.10); box-shadow: 0 10px 20px rgba(0,0,0,.08);}
+.scanCard .top{display:flex; align-items:center; justify-content:space-between; gap:10px;}
+.scanCard .rank{font-weight:950; font-size:12px; letter-spacing:.02em; opacity:.85;}
+.scanCard .m{font-weight:950; font-size:13px;}
+.scanCard .mid{display:flex; align-items:center; justify-content:space-between; gap:10px;}
+.scanCard .mk{font-size:12px; opacity:.78; font-weight:850; white-space:nowrap; overflow:hidden; text-overflow:ellipsis;}
+.scanCard .best{font-size:12px; font-weight:950; opacity:.88; white-space:nowrap;}
+.scanCard .od{font-size:12px; opacity:.85; font-weight:900;}
+.scanCard .od .mono{font-variant-numeric: tabular-nums;}
+@media (prefers-reduced-motion: no-preference){
+  .scanCard{transition: transform .18s ease, box-shadow .18s ease, border-color .18s ease;}
+  .scanCard:hover{transform: translateY(-1px); box-shadow: 0 14px 34px rgba(0,0,0,.16); border-color: rgba(255,255,255,.18);}
+  [data-theme="light"] .scanCard:hover{box-shadow: 0 14px 30px rgba(0,0,0,.10); border-color: rgba(0,0,0,.14);}
+}
+@media (max-width: 860px){
+  .scanCard{grid-column: span 12;}
+}
+
+/* --- Multi View A/B Compare Board --- */
+.cmpWrap{margin-top: 14px; padding-top: 10px; border-top: 1px solid rgba(255,255,255,.08);}
+[data-theme="light"] .cmpWrap{border-top: 1px solid rgba(0,0,0,.08);}
+.cmpHead{display:flex; align-items:center; justify-content:space-between; gap:10px; flex-wrap:wrap;}
+.cmpBtns{display:flex; gap:8px; flex-wrap:wrap;}
+.cmpBtn{appearance:none; border:none; cursor:pointer;
+  padding:7px 10px; border-radius: 999px; font-weight: 950; font-size: 12px;
+  background: rgba(255,255,255,.10); color: inherit;
+  box-shadow: 0 10px 18px rgba(0,0,0,.10);
+}
+[data-theme="light"] .cmpBtn{background: rgba(0,0,0,.06); box-shadow: 0 10px 16px rgba(0,0,0,.06);}
+.cmpBtn.ghost{opacity:.78; background: rgba(255,255,255,.06);}
+[data-theme="light"] .cmpBtn.ghost{background: rgba(0,0,0,.04);}
+@media (prefers-reduced-motion: no-preference){
+  .cmpBtn{transition: transform .14s ease, box-shadow .14s ease;}
+  .cmpBtn:hover{transform: translateY(-1px); box-shadow: 0 14px 26px rgba(0,0,0,.14);}
+}
+.cmpGrid{display:grid; grid-template-columns: repeat(12, minmax(0,1fr)); gap:10px; margin-top:10px;}
+.cmpCard{grid-column: span 6; padding:12px 12px; border-radius:18px;
+  background: rgba(255,255,255,.06); border:1px solid rgba(255,255,255,.10);
+}
+[data-theme="light"] .cmpCard{background: rgba(0,0,0,.03); border:1px solid rgba(0,0,0,.10);}
+.cmpCard .t{display:flex; align-items:center; justify-content:space-between; gap:10px;}
+.cmpCard .tag{font-weight:950; font-size:12px; opacity:.86;}
+.cmpCard .mv{font-weight:950; font-size:12px;}
+.cmpCard .ml{margin-top:6px; font-size:12px; opacity:.82; font-weight:850;}
+.cmpCard .od{margin-top:8px; font-size:12px; font-weight:900; opacity:.88;}
+.cmpEmpty{opacity:.55;}
+@media (max-width: 860px){
+  .cmpCard{grid-column: span 12;}
+}
 </style>
 </head>
 
@@ -219,6 +280,17 @@
         </div>
 
         <div class="divider"></div>
+
+
+<div id="quickPasteWrap" class="qpWrap" style="display:none">
+  <div class="small qpTitle"><b>빠른 붙여넣기</b> <span class="qpMeta">(1줄=자동 적용 · 여러줄=마진 스캐너 TOP3)</span></div>
+  <textarea id="quickPasteInput" class="in textarea qp mono" placeholder="예: 팀A 2.35 3.40 2.90 팀B"></textarea>
+  <div class="small" id="quickPasteStatus" style="margin-top:8px;"></div>
+  <div id="scanTopWrap" style="display:none; margin-top:12px;">
+    <div class="small"><b>마진 스캐너 TOP3</b> <span class="qpMeta">(클릭하면 입력칸에 적용)</span></div>
+    <div class="scanGrid" id="scanTopList"></div>
+  </div>
+</div>
 
         <div id="pasteWrap" style="display:none">
           <div class="small" id="pasteDesc">다중 마켓은 줄 단위로 붙여넣으면 자동 파싱됩니다.</div>
@@ -315,6 +387,23 @@
           </div>
         </div>
 
+
+<div class="cmpWrap" id="cmpWrap">
+  <div class="cmpHead">
+    <div class="small"><b>Multi View</b> · A/B 비교 보드</div>
+    <div class="cmpBtns">
+      <button type="button" class="cmpBtn" id="cmpSaveA">A 저장</button>
+      <button type="button" class="cmpBtn" id="cmpSaveB">B 저장</button>
+      <button type="button" class="cmpBtn ghost" id="cmpSwap">A↔B</button>
+      <button type="button" class="cmpBtn ghost" id="cmpClear">초기화</button>
+    </div>
+  </div>
+  <div class="cmpGrid" id="cmpGrid">
+    <div class="cmpCard" id="cmpA"></div>
+    <div class="cmpCard" id="cmpB"></div>
+  </div>
+  <div class="small" id="cmpDelta" style="margin-top:8px; opacity:.85;"></div>
+</div>
         <div class="sep"></div>
         <div class="small" id="explain">
           공정확률/공정배당은 입력 배당의 암시확률을 정규화해 계산합니다. “공정대비”는 그 공정배당 대비 얼마나 덜 불리한지(상대지표)를 보여줍니다.
@@ -326,7 +415,7 @@
     </div>
   </div>
 
-  <script src="../assets/js/inline-bundles/b.virtual.v31.7c2f0c2a7a.js"></script>
+  <script src="../assets/js/inline-bundles/b.virtual.v40.luxe.9f01c2.js"></script>
   <script id="__88stToolConfig" type="application/json" data-src="../assets/config/toolconfig/c.4b8e8f74b9.json"></script>
   <script>
     // Mobile/desktop dock polish: keep tools compact and insert a subtle divider between "예시" and "공유/저장/히스토리".
